Added required changes for JavaFX11